Add alert rule for missing backups

--- a/charts/velero-pvc-watcher/values.yaml
+++ b/charts/velero-pvc-watcher/values.yaml
@@ -42,6 +42,8 @@ metrics:
     enabled: "false"
     port: "2112"
     path: "/metrics"
+  prometheusRules:
+    enabled: "false"
 
 rbac:
   create: true
